# LangChainLearn

./: .env  .gitignore  Command_Learn.md  README.md  main.py  pyproject.toml  verify_langchain.py
original_conceptual_process/: send.html
src/: agent.py  models.py  prompt_template.py
src/core/: 2.Modle.py
src/core/md/: 1.Agent.md  2.Model.md
src/utils/: make_avatar.py  models.py  prompt_template.py  tools.py
